Add final project update

--- a/android/android-databinding/app/src/main/res/layout/item_nota.xml
+++ b/android/android-databinding/app/src/main/res/layout/item_nota.xml
@@ -1,15 +1,20 @@
 <?xml version="1.0" encoding="utf-8"?>
 <layout>
     <data>
+        <import type="android.view.View" />
         <variable
             name="nota"
-            type="br.com.alura.ceep.model.Nota" />
+            type="br.com.alura.ceep.ui.databinding.NotaData" />
+        <variable
+            name="listener"
+            type="br.com.alura.ceep.ui.recyclerview.adapter.ListaNotasAdapter.ViewHolder" />
     </data>
     <androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
         xmlns:app="http://schemas.android.com/apk/res-auto"
         xmlns:tools="http://schemas.android.com/tools"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:onClick="@{() -> listener.onClickNote()}"
         android:layout_margin="8dp"
         app:cardCornerRadius="8dp"
         app:cardElevation="1dp">
@@ -22,7 +27,9 @@
                 android:id="@+id/item_nota_imagem"
                 android:layout_width="0dp"
                 android:layout_height="100dp"
+                app:loadImage="@{nota.imagemUrl}"
                 android:contentDescription="@string/imagem_da_nota"
+                android:visibility="@{nota.imagemUrl.empty ? View.GONE : View.VISIBLE}"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toTopOf="parent"
@@ -33,6 +40,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginEnd="16dp"
+                android:visibility="@{nota.favorita ? View.VISIBLE : View.GONE}"
                 android:background="@drawable/ic_action_favorita"
                 android:contentDescription="@string/imagem_nota_favorita"
                 app:layout_constraintBottom_toBottomOf="@id/item_nota_titulo"
@@ -68,6 +76,7 @@
                 android:ellipsize="end"
                 android:maxLines="5"
                 android:textSize="18sp"
+                android:text="@{nota.descricao}"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="@id/item_nota_titulo"
